# rust-kinect-reprojection

./: .gitignore  Cargo.toml  renderdoc_capture_launch_settings.cap  rust-kinect-reprojection.code-workspace  rustfmt.toml
app/: Cargo.toml
app-bevy/: .gitignore  Cargo.toml  app_settings.json  app_settings_calibration_ui.json  app_settings_game_ui.json
app-bevy/assets/shaders/: custom_material_depth_model.wgsl  custom_material_depth_texture.wgsl
app-bevy/benches/: cpu_transform.rs
app-bevy/examples/: find_transform.rs  find_transform2.rs  read_camera2_info_from_config_files.rs
app-bevy/src/: app_settings.rs  calibration_ui.rs  camera2_vmc_osc_receiver.rs  debug_coordinates.rs  delay_buffer.rs  depth_model2.rs  depth_texture.rs  dock_ui.rs  frame_display.rs  frame_visualization_util.rs  game_ui.rs  gui_common.rs  lib.rs  main.rs  point_cloud.rs  receiver.rs  renderdoc_api.rs  time_series_plot.rs  util.rs  vr_connector.rs
app-egui-three-d/: Cargo.toml
app-egui-three-d/shaders/: depth_model.frag  depth_model.vert
app-egui-three-d/src/: app.rs  app_gui.rs  app_settings.rs  camera_orbit_control.rs  debug_models.rs  depth_model.rs  main.eframe.rs  main.rs  per_frame_update.rs  util.rs
app-nannou/: Cargo.toml
app-nannou/src/: data.rs  main.rs
app/src/: main.rs
include/: NuiImageCamera.h  forward_declarations.h
kinect1/: Cargo.toml
kinect1-autocxx/: Cargo.toml  build.rs  expanded.rs
kinect1-autocxx/src/: lib.rs  wrapper.hpp
kinect1-cc/: Cargo.toml  build.rs
kinect1-cc/src/: kinect_helper.c
kinect1-cc/tests/: test.rs
kinect1-sys/: Cargo.toml  build.rs  expanded.rs  expended.rs  wrapper.h  wrapper.hpp
kinect1-sys/include/: NuiApi.h  NuiSensor.h
kinect1-sys/src/: constants.h  kinect_helper.h  lib.rs  nui_sensor_interface.h  nui_sensor_interface.inc  system_types.h
kinect1/benches/: coordinate_mapper_depth_to_color.rs
kinect1/examples/: coordinate_mapper_dump.rs  coordinate_mapper_test.rs  coordinate_mapper_test2.rs
kinect1/src/: coordinate_mapper.rs  coordinate_mapper_wrapper.rs  custom_coordinate_mapper.rs  hresult_helper.rs  kinect_wrapper_v3.rs  lib.rs  packed_depth.rs  skeleton.rs  worker_v2.rs
openvr-test/: Cargo.toml
openvr-test/src/: main.rs
