[workspace]
resolver = "2"

members=[
    "app",
    "app-bevy",
    "kinect1",
    "kinect1-sys",
    # "kinect1-cc",
    # "kinect1-autocxx",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
