[workspace]
resolver = "2"
members=[
    # "app-nannou",
    "app-egui-three-d",
    # "app",
    # "app-bevy",

    "kinect1",
    "kinect1-sys",
    "openvr-test",
    # "kinect1-cc",
    # "kinect1-autocxx",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [patch.crates-io]
# wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen.git' }
