[package]
name = "rust-kinect-reprojection-app-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kinect1 = {path = "../kinect1"}
anyhow = "1.0.66"
thiserror = "1.0"
image = "0.24.5"
array2d = "0.3"
itertools = "0.10.5"
ordered-float = "3.4.0"

# bevy = "0.9"
bevy = { version = "0.9", features = ["dynamic"] }
bevy_reflect = { version = "0.9" }
bevy_asset = { version = "0.9" }
bevy_render = { version = "0.9" }
bevy_framepace = "0.9"
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }

bevy-inspector-egui = { version = "0.16.0-pre.2", default-features = false, features=["bevy_pbr"] }
egui = "0.20.0"
bevy_egui = "0.18"
egui_dock = "0.3"
egui-gizmo = { git = "https://github.com/matthiascy/egui-gizmo", rev = "516dc8453bb6423d8cf050af172e854611a8a1d9" }
rfd = "0.10.0"
bytemuck = "1.12.3"

genmesh = "0.6.2"

# bevy-aabb-instancing = "0.7.0"
# smooth-bevy-cameras = "0.6.0"
bevy-aabb-instancing = { git = "https://github.com/foresightminingsoftwarecorporation/bevy-aabb-instancing" }
smooth-bevy-cameras = { git = "https://github.com/olegomon/smooth-bevy-cameras" }

openvr = "0.6.0"

lazy_static = "1.4.0"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Performance",
]
