[package]
name = "rust-kinect-reprojection-app-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kinect1 = { path = "../kinect1" }
anyhow = "1.0.66"
thiserror = "1.0"
image = "0.24.5"
array2d = "0.3"
itertools = "0.10.5"
ordered-float = "3.4.0"
bytemuck = "1.12.3"
lazy_static = "1.4.0"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
cfg-if = "1.0.0"

bevy = "0.9"
# bevy = { version = "0.9", features = ["dynamic"] }
bevy_reflect = { version = "0.9" }
bevy_asset = { version = "0.9" }
bevy_render = { version = "0.9" }
bevy_framepace = "0.11"

bevy_osc = "0.5.0"
nannou_osc = "0.18.0"
iyes_loopless = "0.9.1"

# dependencies needed only for the debug UI
openvr = "0.6.0"
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
bevy-inspector-egui = { version = "0.17", default-features = false, features = [
    "bevy_pbr",
] }
egui = "0.20.0"
bevy_egui = "0.19"
egui_dock = "0.3"
rfd = "0.11.0"
# bevy-aabb-instancing = { git = "https://github.com/foresightminingsoftwarecorporation/bevy-aabb-instancing" }
smooth-bevy-cameras = { git = "https://github.com/olegomon/smooth-bevy-cameras" }


[dependencies.windows]
version = "0.44.0"
features = ["Win32_Foundation", "Win32_System_Performance"]


[features]
default = ["debug_ui"]
debug_ui = []
