[package]
name = "rust-kinect-reprojection-app-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kinect1 = { path = "../kinect1" }
anyhow = "1.0.66"
thiserror = "1.0"
image = "0.24.5"
itertools = "0.10.5"
ordered-float = "3.4.0"
bytemuck = "1.12.3"
lazy_static = "1.4.0"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
cfg-if = "1.0.0"

# bevy = "0.9"
bevy = { version = "0.9", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
] }
# bevy = { version = "0.9", features = ["dynamic"] }
bevy_reflect = { version = "0.9" }
bevy_framepace = "0.11"

bevy_osc = "0.5.0"
nannou_osc = "0.18.0"
iyes_loopless = "0.9.1"

# dependencies needed only for the debug UI (and later, the calibration UI)
openvr = { version = "0.6.0", optional = true }
bevy_prototype_debug_lines = { version = "0.9", features = [
    "3d",
], optional = true }
bevy-inspector-egui = { version = "0.17", default-features = false, features = [
    "bevy_pbr",
], optional = true }
egui = { version = "0.20.0", optional = true }
bevy_egui = { version = "0.19", optional = true }
egui_dock = { version = "0.3", optional = true }
rfd = { version = "0.11.0", optional = true }
# bevy-aabb-instancing = { git = "https://github.com/foresightminingsoftwarecorporation/bevy-aabb-instancing" }
smooth-bevy-cameras = { git = "https://github.com/olegomon/smooth-bevy-cameras", optional = true }


[dependencies.windows]
version = "0.44.0"
features = ["Win32_Foundation", "Win32_System_Performance"]


[features]
default = []
calibration = [
    "debug_helpers",
    "openvr",
    "bevy-inspector-egui",
    "egui",
    "bevy_egui",
    "egui_dock",
    "rfd",
    "smooth-bevy-cameras",
    # additional bevy features
    # "bevy/bevy_scene",
    # "bevy/bevy_gilrs",
    # "bevy/bevy_audio",
    # "bevy/animation",
    # "bevy/x11",
    "bevy/filesystem_watcher",
    "bevy/render",
    "bevy/bevy_sprite",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/hdr",
    "bevy/vorbis",
]
debug_helpers = ["bevy_prototype_debug_lines"]
