[package]
name = "rust-kinect-reprojection-app-app-egui-three-d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kinect1 = {path = "../kinect1"}
anyhow = "1.0.66"
thiserror = "1.0"
image = "0.24.5"
itertools = "0.10.5"
ordered-float = "3.4.0"
bytemuck = "1.12.3"
lazy_static = "1.4.0"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"


# egui = "0.20.0"
# egui_dock = "0.3"
# eframe = "0.20.1"
# egui_glow = "0.20.1"
# glow = "^0.11"
# three-d = { version = "0.14", default-features = false }
# three-d = { version = "0.14", features=["egui-gui"] }
three-d = { git = "https://github.com/asny/three-d/", rev = "0696f299f05ae81f9b5b9bc282de06cfd55a6f7f", features=["egui-gui"] }

rfd = "0.10.0"


openvr = "0.6.0"


[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Performance",
]
