[package]
name = "kinect1-autocxx"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.23.1"
cxx = "1.0"
miette = { version = "5", features = ["fancy"] }
thiserror = "1.0.37"

[build-dependencies]
autocxx-build = "0.23.1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
