[package]
name = "kinect1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kinect1-cc = {path = "../kinect1-cc"}
kinect1-sys = {path = "../kinect1-sys"}
winresult = "0.1.3"
thiserror = "1.0"
image = "0.24.5"
array2d = "0.3.0"
itertools = "0.10.5"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
]
