[package]
name = "openvr-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0"
image = "0.24.5"
array2d = "0.3.0"
itertools = "0.10.5"
crossbeam = "0.8.2"
bytemuck = "1.12.3"
tracing = "0.1.37"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
enumset = "1.0.12"
ordered-float = "3.4.0"

openvr = "0.6.0"
# openvr_sys = "2.0.3"

